deleting unnecessary field-p-ip-image template, vertical teaser collection mobile bug, minor recipe sass refactor

--- a/web/themes/custom/pineapple/sass/components/_teaser-collection.scss
+++ b/web/themes/custom/pineapple/sass/components/_teaser-collection.scss
@@ -15,10 +15,12 @@
     &.vertical {
       margin-bottom: $unit * 2;
       padding-left: 15px;
+      padding-right: 15px;
 
       @include breakpoint($lap) {
         flex: 0 0 50%;
         max-width: 50%;
+        padding-right: 0;
       }
 
       @include breakpoint($desk) {
